<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/writeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/write"
        android:onClick="write" />

    <Button
        android:id="@+id/readButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/writeButton"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/read"
        android:onClick="read" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/readButton"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="Hello World!" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/tv"
        android:layout_marginTop="50dp"
        tools:ignore="TextSizeCheck"
        android:padding="10dp">

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/introduceEmail"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="emailAddress"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:textColorHint="#A1887F" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/introduceName"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="name"
                android:hint="@string/nameHint"
                android:inputType="text"
                android:textColorHint="#A1887F" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/ageLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/introduceAge"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/ageHint"
                android:autofillHints="age"
                android:inputType="number" />
        </TableRow>
    </TableLayout>

</RelativeLayout>